force-app/main/default/objects/Logger_Setting__mdt/fields/Log_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Log_Bucket__c</fullName>
    <description>SIEM Index or bucket that will receive the log data</description>
    <label>Log Bucket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>