force-app/main/default/objects/Logger_Setting__mdt/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>Definition of the level of logs configured at an Org level. A log level of error will register log entries marked as ERROR, while FINEST will register all types of logs</description>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
                <default>true</default>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>FINER</fullName>
            </value>
            <value>
                <fullName>FINEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>