force-app/main/default/objects/Logger_Setting__mdt/fields/SIEM__c.field-meta.xml
<CustomField>
    <fullName>SIEM__c</fullName>
    <description>SIEM system that will receive the logs registered by the Logging framework</description>
    <label>SIEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELK</fullName>
                <default>true</default>
                <label>ELK</label>
            </value>
            <value>
                <fullName>DataDog</fullName>
            </value>
            <value>
                <fullName>Zabbix</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>