force-app/main/default/objects/Logger_Setting__mdt/fields/SIEM_Service_Key__c.field-meta.xml
<CustomField>
    <fullName>SIEM_Service_Key__c</fullName>
    <description>SIEM API key that will receive the log data</description>
    <label>API Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>