force-app/main/default/objects/Logger_Setting__mdt/fields/SIEM_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>SIEM_Service_URL__c</fullName>
    <description>URL of the SIEM services that will be used on the publishing of messages</description>
    <label>SIEM Service URL</label>
    <type>Url</type>
</CustomField>